Avoid current HTML jump target being hidden behind page header

--- a/css/MLS-navbar-left.css
+++ b/css/MLS-navbar-left.css
@@ -110,13 +110,24 @@ nav > div.ltx_TOC {
   padding: 0.5rem 1rem;
   background: #F6F6F6; /* Same as body. */
   color: black; /* Same as side bar. */
+  border-bottom-color: #DE1D31; /* "Bouncing ball red" */
+  border-bottom-width: 2px;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
+/* Make current jump target appear below the page header instead of behind it.
+ */
+:target:before {
+  visibility: hidden;
+  content: "X"; /* Hidden, but needs to be non-empty to work in Chrome. */
+  display: block;
+  position: relative;
+  top: calc(-(2.5rem + 2px)); /* Offset by total height of .ltx_page_header. */
+}
+
 .ltx_page_content {
   padding: 1rem;
-  margin-top: 1.5rem; /* Header height plus padding below, minus a little bit. */
   background: white;
 }
 
